[tool.poetry]
name = "APP_NAME"
version = "0.1.0"
description = "APP_NAME"
authors = ["Jia Lie <819178421@qq.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
black = "^20.8b1"
pytest = "^6.1.2"
pre-commit = "^2.8.2"
flake8 = "^3.8.4"
mypy = "^0.790"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = "0"
include_trailing_comma = true
line_length = "119"
lines_after_imports = "2"
multi_line_output = "3"
use_parentheses = true
force_to_top = "setuppath"

[tool.black]
line-length = 119
target-version = ['py37']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

